@@ -7,6 +7,9 @@ New Features
        select * from foo; -m vert
   * The datetime_fmt now allows "S" to indicate fractions of a second,
     not just milliseconds, so you can now carry the precision out further.
+  * Added new "exit_on" configuration variable. This variable indicates
+    which commands, should they error, will cause the jsqsh session to
+    exit.
 
 Bug Fixes
   * Fixed NullPointerException when stored proc output parameters return a 
